--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
 Fire
 youtube_dl
 googledrivedownloader
+numpy~=1.20.3
+pillow~=8.4.0
+future~=0.18.2
+matplotlib~=3.4.3
+scipy~=1.7.1
+scikit-learn~=0.24.2
+six~=1.16.0
+imageio~=2.9.0
+pandas~=1.3.4
+tqdm~=4.62.3
+setuptools~=58.0.4
