--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,27 @@
-Fire
+Fire~=0.4.0
 youtube_dl
 googledrivedownloader
-librosa
-numpy
-pillow
-future
-matplotlib
-scipy
-scikit-learn
-six
-imageio
-pandas
-tqdm
-setuptools
-torch
-sklearn
-torchvision
-opencv-python
-torchtree
-pydub
-path
+librosa~=0.9.1
+numpy~=1.20.1
+pillow~=8.2.0
+future~=0.18.2
+matplotlib~=3.3.4
+scipy~=1.6.2
+scikit-learn~=0.24.1
+six~=1.15.0
+imageio~=2.9.0
+pandas~=1.2.4
+tqdm~=4.63.1
+setuptools~=61.2.0
+torch~=1.11.0
+sklearn~=0.0
+torchvision~=0.12.0
+opencv-python~=4.5.5.64
+torchtree~=1.0.0
+pydub~=0.25.1
+path~=15.1.2
 pretty_midi
-soundfile
-solos
-tensorflow
+soundfile~=0.10.3.post1
+solos~=0.4.1
+tensorflow~=2.8.0
+keras~=2.8.0
